# cc-resume

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: cli.rs  main.rs  pipeline.rs
src/config/: mod.rs
src/exporter/: markdown.rs  mod.rs  parser.rs
src/qmd/: client.rs  mod.rs
src/search/: mod.rs
src/session/: mod.rs  resume.rs
src/summarizer/: mod.rs
src/tui/: app.rs  folder_tree.rs  input.rs  mod.rs  ui.rs
src/watcher/: daemon.rs  mod.rs
