[package]
name = "claude-resume"
version = "0.1.0"
edition = "2021"
description = "Semantic search and resume for Claude Code sessions"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# File watching
notify = "7"
notify-debouncer-full = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for QMD MCP daemon)
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unix process management
libc = "0.2"

# Pin transitive deps that need newer rustc in latest versions
instability = ">=0.3, <0.3.8"
darling = ">=0.20, <0.21"

# Misc
dirs = "6"
uuid = { version = "1", features = ["v4"] }
